Fixed button sizing issue on safari

--- a/src/App.css
+++ b/src/App.css
@@ -72,6 +72,7 @@ button[name=close] {
     border-top-right-radius: 4px;
     border-bottom-right-radius: 4px;
     cursor: pointer;
+    width: 2rem;
 }
 
 button[name=close] > svg {
